@@ -56,13 +56,15 @@ A comment line begins with the # character. Both comment lines and
 empty lines are ignored. A line can be continued by adding a \
 character to the end of the line.<br>
 <br>
-The <span style="font-family: monospace;">PACKAGE </span>declaration
+The <span style="font-family: monospace;">PACKAGE</span> declaration
 in the above example indicates the name of the Java package that
 compiled Tcl procedures will be placed in. In the above example, a Tcl
 procedure
 named <span style="font-family: monospace;">foo</span> would be
 compiled and saved in a Java file named <span
- style="font-family: monospace;">com/chairsoft/recliner/controls/FooCmd.java</span>.<br>
+ style="font-family: monospace;">com/chairsoft/recliner/controls/FooCmd.java</span>.
+Each module file must contain a
+<span style="font-family: monospace;">PACKAGE</span> declaration.<br>
 <br>
 The <span style="font-family: monospace;">OPTIONS</span> <span
  style="font-family: monospace;"></span>declaration will define the set
